k8s-playground/linkding/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkding
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
