k8s-playground/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
spec:
  nodeSelector:
    node-role.kubernetes.io/worker: worker
  selector:
    app: linkding
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
